istio/home.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home
  labels:
    name: home
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
      version: v1
  template:
    metadata:
      labels:
        app: home
        version: v1
    spec:
      serviceAccountName: home
      containers:
      - image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        name: home
        ports:
        - containerPort: 80
        volumeMounts:
        - name: home
          mountPath: "/usr/share/nginx/html/"
          readOnly: true
      volumes:
      - name: home
        configMap:
          name: home
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: home
  labels:
    app: home
    service: home
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: home
