istio/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    name: ingress
    istio-injection: disabled
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice
  namespace: ingress
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /httpbin/
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: home.home.svc.cluster.local
        port:
          number: 80
